# azure-c-shared-utility

./: .gitignore  CMakeLists.txt
cmake_finders/: FindRT.cmake  FindUUID.cmake
tests/condition_unittests/: CMakeLists.txt
tests/uniqueid_unittests/: CMakeLists.txt
testtools/ctest/inc/: ctest.h
